updated html and css file

--- a/client-messagethroughtime/public/index.html
+++ b/client-messagethroughtime/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel=""stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
   <style>
   body {
