--- a/client-messagethroughtime/public/index.html
+++ b/client-messagethroughtime/public/index.html
@@ -11,9 +11,10 @@
 </head>
 <body>
 
-<h1>Audiowide Font</h1>
-<p>Lorem ipsum dolor sit amet.</p>
-<p>123456790</p>
+<h1>Welcome to Message through time</h1>
+<p>blah blah</p>
+<div id="app"></div>
+
 
 </body>
 </html>
