--- a/client-messagethroughtime/public/index.html
+++ b/client-messagethroughtime/public/index.html
@@ -11,9 +11,7 @@
   </head>
 <body>
 
-<div class ="container">
-  <p class="typed">typed text?</p>
-</div>
+<div class ="container"></div>
 
 <div id="app"></div>
 
